# Streamfitter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/streamfitter/: ExponentialDecay2Parameter.py  SharedRateExponential2Parameter.py  __init__.py  error_propogation.py  fitter.py  fitter_protocol.py
tests/: test_2_parameter_exponential_fitter.py  test_shared_rate_2_parameter_exponential_fitter.py
