[project]
name = "streamfitter"
version = "0.1.6"
description = "A program for fitting functions and calculating montecarlo based errors"
authors = [
    { name = "varioustoxins", email = "garyt.and.sarahb@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "jax>=0.4.28",
    "lmfit>=1.3.1",
    "runstats>=2.0.0",
    "tabulate==0.8.9",
    "classprop>=0.1.1",
    "nef-pipelines",
    "pynmrstar==3.3.4",
    "jaxlib>=0.4.28",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamfitter"]

[tool.ruff]
line-length = 120          # some more slack

[tool.ruff.format]
quote-style = "single"     # i like my code blue
